added central tendency measures to the code

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8abf788f-2fa6-43d7-a3a1-aa311c4919db",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "893a3cda-5eb4-48f8-bc8f-80e45d7e08d4",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8477049a-0c1f-4e2b-8e91-2ee8ba2e4c03",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "4    0      2       1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,18 +189,25 @@
    "metadata": {},
    "source": [
     "For reference, the acronyms at the table have the following meaning:\n",
+    "\n",
     "cp : Types of Chest pain (1 - typical angina, 2 - atypical angina, 3 - non-anginal pain, 4 - asymptomatic)\n",
+    "\n",
     "trtbps : resting blood pressure (in mm Hg)\n",
+    "\n",
     "chol : cholestoral in mg/dl\n",
+    "\n",
     "fbs : fasting blood sugar > 120 mg/dl (1 = true; 0 = false)\n",
+    "\n",
     "restecg : resting electrocardiographic results (0 - normal, 1 -  having ST-T wave abnormality (T wave inversions and/or ST elevation or depression of > 0.05 mV), 2 - showing probable or definite left ventricular hypertrophy by Estes' criteria)\n",
+    "\n",
     "thalach : maximum heart rate achieved\n",
+    "\n",
     "exng: exercise induced angina (1 = yes; 0 = no)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "74d8726b-d6ba-4872-8503-f98cfff10363",
    "metadata": {},
    "outputs": [
@@ -262,7 +269,7 @@
        "4  97.5"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,8 +281,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "81d9deed-89fc-4966-ac96-8c6813aa351d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating central tendency measures for both datasets\n",
+    "    # means\n",
+    "age_mean = data_gen['age'].mean()\n",
+    "chol_mean = data_gen['chol'].mean()\n",
+    "thalachh_mean = data_gen['thalachh'].mean()\n",
+    "bps_mean = data_gen['trtbps'].mean()\n",
+    "oxy_mean = data_o2.mean()\n",
+    "\n",
+    "    # medians\n",
+    "age_medi = data_gen['age'].median()\n",
+    "chol_medi = data_gen['chol'].median()\n",
+    "thalachh_medi = data_gen['thalachh'].median()\n",
+    "bps_medi = data_gen['trtbps'].median()\n",
+    "restecg_medi = data_gen['restecg'].median()\n",
+    "\n",
+    "    # modes\n",
+    "age_mode = data_gen['age'].mode()\n",
+    "chol_mode = data_gen['chol'].mode()\n",
+    "thalachh_mode = data_gen['thalachh'].mode()\n",
+    "bps_mode = data_gen['trtbps'].mode()\n",
+    "restecg_mode = data_gen['restecg'].mode()\n",
+    "fbs_mode = data_gen['fbs'].mode()\n",
+    "exng_mode = data_gen['exng'].mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b050cd51-4e0f-48a8-9510-f4712ea2e6e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataframes for CTM\n",
+    "    # means\n",
+    "df_means = pd.DataFrame({\n",
+    "    'age' : age_mean,\n",
+    "    'chol' : chol_mean,\n",
+    "    'thalachh' : thalachh_mean,\n",
+    "    'trtbps' : bps_mean,\n",
+    "    'o2' : oxy_mean\n",
+    "}, index = [0])\n",
+    "\n",
+    "    # medians\n",
+    "df_medians = pd.DataFrame({\n",
+    "    'age' : age_medi,\n",
+    "    'chol' : chol_medi,\n",
+    "    'thalachh' : thalachh_medi,\n",
+    "    'trtbps' : bps_medi,\n",
+    "    'restecg' : restecg_medi\n",
+    "}, index = [0])\n",
+    "\n",
+    "    # modes\n",
+    "df_modes = pd.DataFrame({\n",
+    "    'age' : age_mode,\n",
+    "    'chol' : chol_mode,\n",
+    "    'thalachh' : thalachh_mode,\n",
+    "    'trtbps' : bps_mode,\n",
+    "    'restecg' : restecg_mode,\n",
+    "    'fbs' : fbs_mode,\n",
+    "    'exng' : exng_mode\n",
+    "}, index = [0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "acd6a592-3f21-4a7b-b87d-bd322cbf1896",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>thalachh</th>\n",
+       "      <th>trtbps</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>exng</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>58</td>\n",
+       "      <td>197</td>\n",
+       "      <td>162</td>\n",
+       "      <td>120</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  chol  thalachh  trtbps  restecg  fbs  exng\n",
+       "0   58   197       162     120        1    0     0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print mean dataset\n",
+    "df_means.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f4d639a8-705f-4ca8-a63f-782553d8060f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>thalachh</th>\n",
+       "      <th>trtbps</th>\n",
+       "      <th>restecg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>55.0</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    age   chol  thalachh  trtbps  restecg\n",
+       "0  55.0  240.0     153.0   130.0      1.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print median dataset\n",
+    "df_medians.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "89cb67da-13ce-483a-8802-2577801d9f80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>thalachh</th>\n",
+       "      <th>trtbps</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>exng</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>58</td>\n",
+       "      <td>197</td>\n",
+       "      <td>162</td>\n",
+       "      <td>120</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  chol  thalachh  trtbps  restecg  fbs  exng\n",
+       "0   58   197       162     120        1    0     0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print modes dataset\n",
+    "df_modes.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bed9b8e9-57a8-40a4-b265-a3780d98694b",
    "metadata": {},
    "outputs": [],
    "source": []
